# haskell_tryout

./: Calc.hs  README.md  app.cabal  app.hs  build.sh  run.sh  test_calc.hs
.devcontainer/: Dockerfile  devcontainer.json
