cabal-version:       >=1.10
name:                haskell-tryout
version:             0.1.0.0
build-type:          Simple

executable app
  main-is:             app.hs
  build-depends:       base >=4.7 && <5
  other-modules:       Calc
  default-language:    Haskell2010

test-suite calc-tests
  type:                exitcode-stdio-1.0
  main-is:             test_calc.hs
  build-depends:       base, tasty, tasty-hunit
  other-modules:       Calc
  default-language:    Haskell2010
